--- a/views/partials/hourtypes.html
+++ b/views/partials/hourtypes.html
@@ -28,8 +28,8 @@
         </div>
         <div class="ts-col">
           <label>Slug</label>
-          <input type="text" id="hour-type-slug" placeholder="e.g., annual, training" />
-          <div class="ts-note">Used internally for identification. Should be lowercase and unique.</div>
+          <input type="text" id="hour-type-slug" placeholder="e.g., annual, training" readonly />
+          <div class="ts-note">Auto-generated from name. Used internally for identification.</div>
         </div>
       </div>
       <div class="ts-row" style="margin-top:16px;">
